<resources>
    <string name="app_name">宁波智慧园</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="net_call_no_network">暂无网络</string>
    <string name="home">园区</string>
    <string name="game_center">周边餐饮</string>
    <string name="my_3yx">圈子</string>
    <string name="setting">我的</string>
    <string name="scan_text">将二维码/条形码放入框内, 即可自动扫描</string>
    <string name="login">登录</string>
    <string name="password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="password1">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="new_password">新&#160;&#160;&#160;&#160;密&#160;&#160;&#160;&#160;码：</string>
    <string name="input_nickname">请输入昵称：</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="account_empty">请输入手机号</string>
    <string name="password_empty">请输入密码</string>
    <string name="account_format_error">请输入有效的手机号</string>
    <string name="mail_format_error">请输入有效的邮箱地址</string>
    <string name="phone_error">手机号码不能少于11位</string>
    <string name="number_chart_limit">数字字符不能超过30</string>
    <string name="input_empty_image">请选择图片</string>
    <string name="newPassword">新密码</string>
    <string name="account_error">账号错误</string>
    <string name="password_format_error">请输入有效的密码</string>
    <string name="password_error">密码错误</string>
    <string name="login_error">账号或密码错误，请重新输入</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="error_phone">请输入有效的手机号码</string>
    <string name="register">注册</string>
    <string name="company_user">企业级用户</string>
    <string name="normal_user">普通用户</string>
    <string name="merchant">商户</string>
    <string name="basicinfo">基本信息</string>
    <string name="user_name">姓名</string>
    <string name="person_num">身份证号</string>
    <string name="company_names">公司名称</string>
    <string name="bank_name">银行账号</string>
    <string name="shop_name">店铺名称</string>
    <string name="upload_shop_pic">上传店铺照片</string>
    <string name="upload_voucher_pic">上传证件图片</string>
    <string name="shop_type">店铺类型</string>
    <string name="household_appliances">家用电器</string>
    <string name="mother_baby_products">母婴用品</string>
    <string name="appliances">家居百货</string>
    <string name="outdoor_activities">活动户外</string>
    <string name="ambrosia">美味食品</string>
    <string name="skin_beauty">护肤美容</string>
    <string name="fashion_girl">时尚女装</string>
    <string name="digital_burning_guest">数码烧客</string>
    <string name="shop_intro">店铺介绍</string>
    <string name="location">宁波市</string>
    <string name="trade">行业：</string>
    <string name="cm_support_withdraw">暂不支持提现</string>
    <string name="perfect_info">完善资料</string>
    <string name="company_user_tip_info">注册完成以后，请到线下XX地址去提交线下资料，方便我们更好的进行审核您的资料。</string>
    <string name="link_phone">联系电话：0574&#8211;278942</string>
    <string name="company_legal_person_name">企业法人姓名</string>
    <string name="empty_company_legal_person_name">企业法人姓名不能为空</string>
    <string name="company_link_method">企业联系方式</string>
    <string name="empty_company_link_method">企业联系方式不能为空</string>
    <string name="business_license_number">营业执照编号</string>
    <string name="empty_business_license_number">营业执照编号不能为空</string>
    <string name="company_name">单位名称(全称)</string>
    <string name="empty_company_name">单位名称不能为空</string>
    <string name="tip">提示</string>
    <string name="commit">提交</string>
    <string name="much_comment_tip">操作频繁，请稍后再试！</string>
    <string name="commit_tip">后台正在审核，请耐心等待&#8230;</string>
    <string name="commit_refuse_tip">审核拒绝，请重新提交企业信息</string>
    <string name="commit_success">提交成功</string>
    <string name="commit_fail">提交失败</string>
    <string name="mobile_num">手机号</string>
    <string name="mobile_hint">请输入手机号(11位)</string>
    <string name="empty_mobile">手机号不能为空</string>
    <string name="error_mobile">手机号输入不正确</string>
    <string name="msg_verify_code">短信验证码</string>
    <string name="get_msg_verify_code">发送验证码</string>
    <string name="msg_verify_code_hint">请输入短信验证码</string>
    <string name="empty_msg_verify_code">短信验证码不能为空</string>
    <string name="error_msg_verify_code">验证码不正确，请重新输入</string>
    <string name="verify_tip">请在60秒内完成验证，超时请点击重新发送</string>
    <string name="i_agree">我同意</string>
    <string name="register_pro_name">《宁波智慧园注册协议》</string>
    <string name="next">下一步</string>
    <string name="garden_belong">所属园区：</string>
    <string name="garden_select">请选择你属园区</string>
    <string name="input_password">输入密码</string>
    <string name="confirm_password">确认新密码</string>
    <string name="password_length">(6&#8211;16位字符)</string>
    <string name="user_name_length1">(1&#8211;30位字符)</string>
    <string name="input_confirm_password">请再次输入密码</string>
    <string name="nick">昵称</string>
    <string name="confirm">确定</string>
    <string name="gotoAuthentication">前往认证</string>
    <string name="AuthenticationIng">审核中</string>
    <string name="noOpenModule">该功能尚未开放，尽情期待</string>
    <string name="tokenPastDue">token已过期，请重新登录</string>
    <string name="Authenticationinfo">认证提示</string>
    <string name="empty_confirm_password">请输入确认密码</string>
    <string name="less_password">密码请控制在6-16个字符</string>
    <string name="diff_password">两次输入密码不一致，请重新输入</string>
    <string name="find_password_success">找回密码成功！</string>
    <string name="select_garden">请选择所属园区</string>
    <string name="find_password_fail">找回密码失败！</string>
    <string name="sex">性别</string>
    <string name="gender">修改性别</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="register_success">注册成功！</string>
    <string name="register_fail">注册失败！</string>
    <string name="find_password">找回密码</string>
    <string name="register_pro">注册协议</string>
    <string name="register_pro_content">\t请先仔细阅读本应用许可协议再使用app应用。阁下一旦使用app应用，即表示同意接受本许可协议的条款约束。\n
	\t本应用由宁波高新区智慧绿城建设有限公司（以下称“宁波智慧园”）开发，并以非公开方式面向宁波智慧园的客户及员工等特定人群展示资讯。\n
	\t本应用仅在中国法律许可的情况下使用。本应用不面向除中国以外任何国家、地区、省、市、自治州或其他司法管辖区公民、居民或位于其中的任何人或组织使用；宁波智慧园不承担任何因应用使用方不当使用该应用而造成的任何损失。\n
	\t本应用仅为提供信息而发布，并不构成任何购买或法律建议与依据，应用阅读方或使用方应就应用内发表的内容咨询独立专业人员的意见。宁波智慧园对此不承担任何责任。\n
	\t任何人或组织均不得在没有宁波智慧园事先书面允许的情况下，以任何形式、用任何手段抄袭、复制、截屏本应用中的任何部分，或者将本应用中的任何部分发放给任何非公司雇员、官员或中介机构。\n
	\t本应用内所列示数据或分析均为宁波智慧园从项目公司、公开信息、第三方数据机构或研究报告等来源获得，宁波智慧园已采取合理手段确保应用内的数据或分析于信息发布日仍为合理正确。宁波智慧园不承担应用内信息于发布日后因部分信息出现偏离或错误而造成的任何损失。</string>
    <string name="index_text">首页</string>
    <string name="surround_text">周边</string>
    <string name="circle_text">圈子</string>
    <string name="mine_text">我的</string>
    <string name="find">发现</string>
    <string name="usual">常用</string>
    <string name="offical">官方</string>
    <string name="index_search_content">请输入查找内容</string>
    <string name="more">更多</string>
    <string name="company_show">园区企业</string>
    <string name="event_guide">办事指南</string>
    <string name="company_show1">园区介绍</string>
    <string name="smart_parking">车位包月</string>
    <string name="real_time_zone">实时园区</string>
    <string name="guest_order">临停预约</string>
    <string name="self_help_service">自助报修</string>
    <string name="flea_market">跳蚤市场</string>
    <string name="action_center">活动中心</string>
    <string name="action_center_details">活动详情</string>
    <string name="make_friends">交友</string>
    <string name="transfer_accounts">转账</string>
    <string name="bill_check">账单</string>
    <string name="smart_cateen">智慧餐厅</string>
    <string name="garden_intr">园区介绍</string>
    <string name="wallet">钱包</string>
    <string name="hot_model">热门版块</string>
    <string name="diary_search">日常查询</string>
    <string name="payment_management">缴费管理</string>
    <string name="company_info_publish">需求发布</string>
    <string name="company_growup_help">企业成长帮助</string>
    <string name="complaint">投诉</string>
    <string name="yellow_pages">园区黄页</string>
    <string name="procedure_approval">手续报批</string>
    <string name="coming_soon">敬请期待</string>
    <string name="zone">宁波智慧园</string>
    <string name="zone_1">园区一</string>
    <string name="zone_2">园区二</string>
    <string name="zone_3">园区三</string>
    <string name="zone_4">园区四</string>
    <string name="my_wallet">我的钱包</string>
    <string name="history_check">历史账单</string>
    <string name="company_name_search_hint">请输入企业名称</string>
    <string name="smart_parking_manager">智能停车管理</string>
    <string name="search_content_hint">请输入搜索内容</string>
    <string name="public_goods">发布商品</string>
    <string name="open_shop">我要开店</string>
    <string name="payment">缴费</string>
    <string name="lookfor_content_hint">请输入查找内容</string>
    <string name="complaint_offer">投诉建议</string>
    <string name="park_inside_procedure_approval">园区内部手续报批</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="help_content">Milan，Milan Milan,Milan solo con te Milan Milan sempre per te 

Camminiamo noi accanto ai nostri eroi 
sopra un campo verde sotto un cielo blu 
conquistate vooi una stella in piu 
ha brillate in nole insieme cantiamo 

Milan Milan solo con te 
Milan Milan sempre per te 

Con il Milan nel cuore 
nel profondo deli\&apos;anima 
un vero amico sele insieme cantiamo 
Milan Milan solo con te 
Milan Milan sempre per te 

Con il sogno che la violenza no 
non ti sporchi maie insieme cantiamo 
Milan Milan solo con te 
Milan Milan sempre per te </string>
    <string name="company_name_content">浙江创文文化创意有限公司</string>
    <string name="company_address_content">浙江市文化路98号14楼1402室</string>
    <string name="company_distance_content">距离100米</string>
    <string name="company_type_content">房地产</string>
    <string name="company_details">企业详情</string>
    <string name="address">地址：</string>
    <string name="tel">电话：</string>
    <string name="address_name">上海市广纪路83号B栋4楼</string>
    <string name="tel_num">029&#8211;324242</string>
    <string name="company_tag">房地产公司</string>
    <string name="company_details_title">关于此企业</string>
    <string name="attention_company">关注该企业</string>
    <string name="attention_success">关注成功！</string>
    <string name="deal_with_date">2015.08.06</string>
    <string name="job_51">51job</string>
    <string name="job_to_job">职来职往</string>
    <string name="ninbo_city">宁波政府</string>
    <string name="zone_publish">园区发布</string>
    <string name="about_app">关于软件</string>
    <string name="help">帮助</string>
    <string name="clear_cache">清理缓存</string>
    <string name="change_psw">登录密码</string>
    <string name="gesture_psw">手势密码锁</string>
    <string name="change_gesture_psw">修改手势密码锁</string>
    <string name="gesture_psw_info">开启后，进入钱包需要验证手势密码。</string>
    <string name="sound_setup">声音</string>
    <string name="payment_location">上海</string>
    <string name="property_fee">物业费</string>
    <string name="property_fee_en">property fee</string>
    <string name="water_rate">水费</string>
    <string name="water_rate_cn">water rate</string>
    <string name="electric_charge">电费</string>
    <string name="electric_charge_en">electric charge</string>
    <string name="coal_gas">煤气</string>
    <string name="coal_gas_en">coal gas</string>
    <string name="credit_card_payments">信用卡还款</string>
    <string name="credit_card_payments_en">credit card payments</string>
    <string name="zone_name_title">园区内部分类名</string>
    <string name="zone_approva_content">我司申请在园区内部于2015年9月18日搭建一个展台。展台展示内容为我司最新开发出来的酒类以及甜品，目的在于招商引资，希望物业能够同意，谢谢～</string>
    <string name="zone_approva_refuse_content">近期园区内部活动较多，展位以及档期已经排满</string>
    <string name="pass">通过</string>
    <string name="quit_login">退出登录</string>
</resources>