<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/propertyFeeLy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
		android:layout_alignTop="@+id/locationLy"      
        >

        <ImageView
            android:id="@+id/propertyFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/payment__icon_1" />

        <TextView
            android:id="@+id/propertyFeeCN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/propertyFee"
            android:gravity="center"
            android:text="@string/property_fee"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size_16" />

        <TextView
            android:id="@+id/propertyFeeEN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/propertyFeeCN"
            android:layout_below="@+id/propertyFeeCN"
            android:gravity="center"
            android:text="@string/property_fee_en"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size_16" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/waterRateLy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/propertyFeeLy"
        android:layout_marginLeft="100dip"
         >

        <ImageView
            android:id="@+id/waterRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/payment_icon_2" />

        <TextView
            android:id="@+id/waterRateCN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/waterRate"
            android:gravity="center"
            android:text="@string/water_rate"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size_16" />

        <TextView
            android:id="@+id/pwaterRateEN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/waterRateCN"
            android:layout_below="@+id/waterRateCN"
            android:gravity="center"
            android:text="@string/water_rate_cn"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size_16" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/electricChargeLy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/coalGasLy"
        android:layout_below="@+id/waterRateLy" 
        android:layout_marginTop="@dimen/margin_20">

        <ImageView
            android:id="@+id/electricCharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/payment_icon_3" />

        <TextView
            android:id="@+id/electricChargeCN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/electricCharge"
            android:gravity="center"
            android:text="@string/electric_charge"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size_16" />

        <TextView
            android:id="@+id/electricChargeEN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/electricChargeCN"
            android:layout_below="@+id/electricChargeCN"
            android:gravity="center"
            android:text="@string/electric_charge_en"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size_16" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/coalGasLy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/electricChargeLy"
        android:layout_marginLeft="120dip"
        android:layout_marginTop="@dimen/margin_20" >

        <ImageView
            android:id="@+id/coalGas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/payment_icon_4" />

        <TextView
            android:id="@+id/ecoalGasCN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/coalGas"
            android:gravity="center"
            android:text="@string/coal_gas"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size_16" />

        <TextView
            android:id="@+id/coalGasEN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ecoalGasCN"
            android:layout_below="@+id/ecoalGasCN"
            android:gravity="center"
            android:text="@string/coal_gas_en"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size_16" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/creditCardPaymentLy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coalGasLy"
        android:layout_alignBottom="@+id/locationLy"
        android:layout_marginLeft="@dimen/margin_10" >

        <ImageView
            android:id="@+id/creditCardPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/payment_icon_5" />

        <TextView
            android:id="@+id/creditCardPaymentCN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/creditCardPayment"
            android:gravity="center"
            android:text="@string/credit_card_payments"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size_16" />

        <TextView
            android:id="@+id/creditCardPaymentEN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/creditCardPaymentCN"
            android:layout_below="@+id/creditCardPaymentCN"
            android:gravity="center"
            android:text="@string/credit_card_payments_en"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size_16" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/locationLy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/payment_yuan"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/locationImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/patmeny_home_p"
            />

        <TextView
            android:id="@+id/location"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:drawableRight="@drawable/down_more_mark"
            android:gravity="center" 
            android:text="@string/payment_location"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size_16" 
            />
    </LinearLayout>

</RelativeLayout>