<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10" >

        <Button
            android:id="@+id/jobToJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/company_grow_btn_bg"
            android:text="@string/job_to_job"
            android:textColor="@color/title_bg_blue"
            android:textSize="@dimen/font_size_14" />

        <Button
            android:id="@+id/jobBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginLeft="@dimen/margin_10"
            android:background="@drawable/company_grow_btn_bg"
            android:text="@string/job_51"
            android:textColor="@color/title_bg_blue"
            android:textSize="@dimen/font_size_14" />

        <Button
            android:id="@+id/ningbo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_weight="1.0"
            android:background="@drawable/company_grow_btn_bg"
            android:text="@string/ninbo_city"
            android:textColor="@color/title_bg_blue"
            android:textSize="@dimen/font_size_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_10" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/margin_5"
            android:drawableLeft="@drawable/ic_mark"
            android:drawablePadding="@dimen/margin_10"
            android:gravity="center_vertical"
            android:text="@string/zone_publish"
            android:textColor="@color/font_gray"
            android:textSize="@dimen/title_font_size_16" />
    </LinearLayout>

</LinearLayout>