<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:minWidth="240dip"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:text="@string/dialog_default_title"
        android:textColor="#575757"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="@dimen/margin_5"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#797979"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center" >

        <Button
            android:id="@+id/cancel_button"
            style="@style/dialog_blue_button"
            android:layout_margin="@dimen/margin_5"
            android:background="@drawable/gray_btn_bg"
            android:text="@string/dialog_cancel" 
            android:visibility="gone"/>

        <Button
            android:id="@+id/confirm_button"
            style="@style/dialog_blue_button"
            android:layout_margin="@dimen/margin_5"
            android:text="@string/dialog_ok" />
    </LinearLayout>

</LinearLayout>